--- a/Kyungsung_UpUp-frontend_dev/UPUP_Project_v2/styles/quiz.module.css
+++ b/Kyungsung_UpUp-frontend_dev/UPUP_Project_v2/styles/quiz.module.css
@@ -15,9 +15,27 @@
   background-color: #3f74db;
 }
 
+.backgroundimage
+{
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../public/image/BackGround.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 0;
+
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   position: absolute;
-  
+  flex-direction: column;
   background-color: #fff;
   padding: 40px;
   border-radius: 20px;
@@ -30,14 +48,15 @@
   position: relative;
   top: -300px;
 
-  background-color: #d6a227;
+  background-color: #fabe31;
   color: white;
   font-weight: bold;
   font-size: 40px;
   text-align: center;
-  padding: 10px 100px;
+  width: 450px;
+  padding: 10;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .questionBox {
@@ -101,6 +120,76 @@
   margin-bottom: 20px;
 }
 
+.gradingbutton_mk2
+{
+  perspective: 800px;
+  width: 80px;
+  height: 30px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  font-family: inherit;
+  outline: none;
+}
+
+.cube 
+{
+  will-change: transform;
+
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease;
+}
+
+.gradingbutton_mk2:hover .cube 
+{
+  transform: rotateX(90deg);
+}
+
+.front,.top 
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  border-radius: 4px;
+  background-color: #e0e0e0;
+  color: #374151;
+  transition: background-color 0.5s ease;
+}
+
+.front 
+{
+  transform: translateZ(15px);
+}
+
+.top 
+{
+  transform: rotateX(-90deg) translateZ(15px);
+}
+
+.gradingbutton_mk2:hover .top 
+{
+  background-color: #ef4444;
+  color: #ffffff;
+}
+
+.gradingbutton_mk2:focus 
+{
+  outline: none;
+}
+
+.gradingbutton_mk2:focus .front 
+{
+  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
+}
+
 .nextQuizButton
 {
   /*Position*/
@@ -113,7 +202,8 @@
   background-color: #e0e0e0;
   border: none;
   border-radius: 6px;
-  padding: 8px 16px;
+  width: 80px;
+  height: 30px;
 
   /*Font*/
   font-weight: bold;
